--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@fortawesome/angular-fontawesome": "^2.0.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@multiversx/sdk-core": "14.2.2",
     "@multiversx/sdk-dapp": "5.0.0-alpha.8",
     "@multiversx/sdk-dapp-ui": "0.0.7",
