Update angular.json and package.json for improved configuration and dependency management
- Added global definition and external dependencies in angular.json for better compatibility.
- Increased budget limits in angular.json to accommodate larger bundle sizes.
- Removed unused dependencies from package.json to streamline the project.
- Updated pnpm-lock.yaml to reflect the removal of deprecated packages and ensure consistency.

--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,15 @@
             ],
             "styles": [
               "src/styles.css"
+            ],
+            "define": {
+              "global": "globalThis"
+            },
+            "externalDependencies": [
+              "crypto",
+              "path",
+              "fs",
+              "stream"
             ]
           },
           "configurations": {
@@ -38,8 +47,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2MB",
+                  "maximumError": "3MB"
                 },
                 {
                   "type": "anyComponentStyle",
