--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@fortawesome/angular-fontawesome": "^2.0.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@multiversx/sdk-core": "14.2.2",
-    "@multiversx/sdk-dapp": "5.0.0-alpha.8",
-    "@multiversx/sdk-dapp-ui": "0.0.7",
+    "@multiversx/sdk-dapp": "^5.x",
+    "@multiversx/sdk-dapp-utils": "^2.x",
+    "@multiversx/sdk-dapp-ui": "^0.x",
     "axios": "^1.10.0",
     "bignumber.js": "^9.3.0",
     "moment": "^2.30.1",
