--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,24 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
+            },
+            "test": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.test.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -80,6 +97,9 @@
             },
             "development": {
               "buildTarget": "mx-template-dapp-angular:build:development"
+            },
+            "test": {
+              "buildTarget": "mx-template-dapp-angular:build:test"
             }
           },
           "defaultConfiguration": "development"
