Refactor environment handling and update configurations
- Removed the EnvironmentService and replaced its functionality with direct access to environment variables.
- Introduced separate environment files for production, testnet, and development configurations.
- Updated the contract address in the config to use the environment variable.
- Added shared configuration for API settings and transaction handling.
- Cleaned up the .gitignore to include new environment files and documentation.
- Updated Angular configuration to support new environment setups.

--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,34 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "testnet": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2MB",
+                  "maximumError": "3MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.testnet.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
@@ -77,6 +104,9 @@
           "configurations": {
             "production": {
               "buildTarget": "mx-template-dapp-angular:build:production"
+            },
+            "testnet": {
+              "buildTarget": "mx-template-dapp-angular:build:testnet"
             },
             "development": {
               "buildTarget": "mx-template-dapp-angular:build:development"
