--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "start-mainnet": "ng serve --configuration production",
+    "start-testnet": "ng serve --configuration testnet",
+    "start-devnet": "ng serve",
+    "build-mainnet": "ng build --configuration production",
+    "build-testnet": "ng build --configuration testnet",
+    "build-devnet": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
