Update Angular configuration and dependencies for Node.js compatibility
- Enabled global polyfills for Node.js by updating angular.json.
- Added 'buffer' package to package.json and pnpm-lock.yaml for MultiversX SDK compatibility.
- Introduced a global polyfill for Buffer in polyfills.ts to ensure proper functionality.

--- a/angular.json
+++ b/angular.json
@@ -32,16 +32,15 @@
             "styles": [
               "src/styles.css"
             ],
-            // Uncomment for build to work
-            // "define": {
-            //   "global": "globalThis"
-            // },
-            // "externalDependencies": [
-            //   "crypto",
-            //   "path",
-            //   "fs",
-            //   "stream"
-            // ]
+            "define": {
+              "global": "globalThis"
+            },
+            "externalDependencies": [
+              "crypto",
+              "path",
+              "fs",
+              "stream"
+            ]
           },
           "configurations": {
             "production": {
