--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@multiversx/sdk-core": "14.2.6",
     "@multiversx/sdk-dapp": "^5.x",
-    "@multiversx/sdk-dapp-utils": "^2.x",
     "@multiversx/sdk-dapp-ui": "^0.x",
+    "@multiversx/sdk-dapp-utils": "^2.x",
     "axios": "^1.10.0",
     "bignumber.js": "^9.3.0",
+    "buffer": "^6.0.3",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
