Refactor environment variable usage and update configurations
- Replaced direct imports from config.ts with environment variables in components and services.
- Updated package.json scripts for consistency in configuration flags.
- Renamed 'authenticatedDomains' to 'sampleAuthenticatedDomains' in environment files for clarity.
- Removed the now obsolete config.ts file to streamline environment management.

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start-mainnet": "ng serve --configuration production",
-    "start-testnet": "ng serve --configuration testnet",
-    "start-devnet": "ng serve",
-    "build-mainnet": "ng build --configuration production",
-    "build-testnet": "ng build --configuration testnet",
-    "build-devnet": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "start-mainnet": "ng serve --configuration=production",
+    "start-testnet": "ng serve --configuration=testnet",
+    "start-devnet": "ng serve --configuration=development",
+    "build-mainnet": "ng build --configuration=production",
+    "build-testnet": "ng build --configuration=testnet",
+    "build-devnet": "ng build --configuration=development",
+    "watch": "ng build --watch --configuration=development",
     "test": "ng test"
   },
   "browser": {
