Update Angular configuration and dependencies for enhanced Node.js compatibility
- Replaced deprecated polyfill imports with 'vite-plugin-node-polyfills' in vite.config.ts.
- Updated angular.json to include new allowed CommonJS dependencies for better compatibility.
- Adjusted package.json and pnpm-lock.yaml to include necessary browserify packages.
- Introduced type declarations for browserify modules in a new polyfills.d.ts file.
- Refactored polyfills.ts to ensure global compatibility and buffer support for MultiversX SDK.

--- a/angular.json
+++ b/angular.json
@@ -32,14 +32,13 @@
             "styles": [
               "src/styles.css"
             ],
-            "define": {
-              "global": "globalThis"
-            },
-            "externalDependencies": [
-              "crypto",
-              "path",
-              "fs",
-              "stream"
+            "allowedCommonJsDependencies": [
+              "buffer",
+              "crypto-browserify",
+              "stream-browserify",
+              "path-browserify",
+              "util",
+              "process"
             ]
           },
           "configurations": {
@@ -48,7 +47,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "3MB",
-                  "maximumError": "4MB"
+                  "maximumError": "5MB"
                 },
                 {
                   "type": "anyComponentStyle",
