--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "start-devnet": "ng serve --configuration=development",
     "build-mainnet": "ng build --configuration=production",
     "build-testnet": "ng build --configuration=testnet",
-    "build-devnet": "ng build --configuration=development",
+    "build": "ng build --configuration=development",
     "watch": "ng build --watch --configuration=development",
-    "test": "ng test"
+    "test": "ng test",
+    "preview": "npx http-server dist/mx-template-dapp-angular/browser"
   },
   "browser": {
     "global": "global",
-    "process": "process/browser"
+    "process": "process/browser",
+    "crypto": "crypto-browserify",
+    "stream": "stream-browserify",
+    "path": "path-browserify",
+    "util": "util",
+    "fs": false
   },
   "private": true,
   "engines": {
@@ -38,9 +44,13 @@
     "axios": "^1.10.0",
     "bignumber.js": "^9.3.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "moment": "^2.30.1",
+    "path-browserify": "^1.0.1",
     "rxjs": "~7.8.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -60,6 +70,7 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "~5.8.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
