Update Angular configuration and dependencies for enhanced functionality
- Added new lodash utilities and axios-fetch to angular.json for improved data handling.
- Increased budget limits in angular.json to allow for larger initial bundle sizes.
- Updated package.json and pnpm-lock.yaml to include the 'process' package for better Node.js compatibility.
- Modified polyfills.ts to ensure global access to the 'process' module for compatibility with MultiversX SDK.

--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,14 @@
               "stream-browserify",
               "path-browserify",
               "util",
-              "process"
+              "process",
+              "lodash.isstring",
+              "lodash.isequal", 
+              "lodash.isempty",
+              "lodash.startcase",
+              "lodash.uniq",
+              "lodash.trimend",
+              "@lifeomic/axios-fetch"
             ]
           },
           "configurations": {
@@ -67,8 +74,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2MB",
-                  "maximumError": "3MB"
+                  "maximumWarning": "3MB",
+                  "maximumError": "5MB"
                 },
                 {
                   "type": "anyComponentStyle",
