--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "crypto-browserify": "^3.12.1",
     "moment": "^2.30.1",
     "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
