Refactoring and enhancements (#5)
* Refactor environment handling and update configurations

- Removed the EnvironmentService and replaced its functionality with direct access to environment variables.
- Introduced separate environment files for production, testnet, and development configurations.
- Updated the contract address in the config to use the environment variable.
- Added shared configuration for API settings and transaction handling.
- Cleaned up the .gitignore to include new environment files and documentation.
- Updated Angular configuration to support new environment setups.

* Refactor button component to use 'cssClass' instead of 'className'

- Renamed the 'WithClassnameType' interface to 'WithCssClassType'.
- Updated button components and related templates to replace 'className' with 'cssClass'.
- Adjusted other components to maintain consistency in class property naming.
- Enhanced type definitions for better clarity and maintainability.

* Add global error handling and notification system

- Introduced GlobalErrorHandlerService for centralized error management.
- Implemented ErrorNotificationComponent to display error notifications in the UI.
- Updated app configuration to use the global error handler.
- Enhanced various components to utilize the error handling service for improved error reporting.
- Added CSS for error notifications with animations and responsive design.
- Refactored existing services to integrate with the new error handling system.

* Enhance error handling with actionable responses and memory management

- Added functionality to execute actions for actionable errors in GlobalErrorHandlerService.
- Implemented timeout management to prevent memory leaks by tracking and clearing timeouts.
- Updated ErrorNotificationComponent to execute actions before dismissing errors.

* Increase gas limit in transaction parameters for improved performance

* Update Angular configuration and dependencies for Node.js compatibility

- Enabled globa

--- a/angular.json
+++ b/angular.json
@@ -32,24 +32,29 @@
             "styles": [
               "src/styles.css"
             ],
-            // Uncomment for build to work
-            // "define": {
-            //   "global": "globalThis"
-            // },
-            // "externalDependencies": [
-            //   "crypto",
-            //   "path",
-            //   "fs",
-            //   "stream"
-            // ]
+            "allowedCommonJsDependencies": [
+              "buffer",
+              "crypto-browserify",
+              "stream-browserify",
+              "path-browserify",
+              "util",
+              "process",
+              "lodash.isstring",
+              "lodash.isequal", 
+              "lodash.isempty",
+              "lodash.startcase",
+              "lodash.uniq",
+              "lodash.trimend",
+              "@lifeomic/axios-fetch"
+            ]
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2MB",
-                  "maximumError": "3MB"
+                  "maximumWarning": "3MB",
+                  "maximumError": "5MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -57,7 +62,34 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "testnet": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "3MB",
+                  "maximumError": "5MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.testnet.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
@@ -77,6 +109,9 @@
           "configurations": {
             "production": {
               "buildTarget": "mx-template-dapp-angular:build:production"
+            },
+            "testnet": {
+              "buildTarget": "mx-template-dapp-angular:build:testnet"
             },
             "development": {
               "buildTarget": "mx-template-dapp-angular:build:development"
