--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start-mainnet": "ng serve --configuration=production",
+    "start-testnet": "ng serve --configuration=testnet",
+    "start-devnet": "ng serve --configuration=development",
+    "build-mainnet": "ng build --configuration=production",
+    "build-testnet": "ng build --configuration=testnet",
+    "build": "ng build --configuration=development",
+    "watch": "ng build --watch --configuration=development",
+    "test": "ng test",
+    "preview": "npx http-server dist/mx-template-dapp-angular/browser"
   },
   "browser": {
     "global": "global",
-    "process": "process/browser"
+    "process": "process/browser",
+    "crypto": "crypto-browserify",
+    "stream": "stream-browserify",
+    "path": "path-browserify",
+    "util": "util",
+    "fs": false
   },
   "private": true,
   "engines": {
@@ -28,13 +39,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@multiversx/sdk-core": "14.2.6",
     "@multiversx/sdk-dapp": "^5.x",
-    "@multiversx/sdk-dapp-utils": "^2.x",
     "@multiversx/sdk-dapp-ui": "^0.x",
+    "@multiversx/sdk-dapp-utils": "^2.x",
     "axios": "^1.10.0",
     "bignumber.js": "^9.3.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "moment": "^2.30.1",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -54,6 +71,7 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "~5.8.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
